--- a/ship.html
+++ b/ship.html
@@ -36,9 +36,11 @@
         @keyframes sideflame{
             from{
                 transform:scale(.95);
+                fill:#FF5000;
             }
             to{
                 transform: scale(1);
+                fill:#FFC806;
             }
         }
 
